# src/docs/swagger.yaml
@@ -8,18 +8,6 @@ definitions:
       msg:
         type: string
     type: object
-  handler.changePasswordRequest:
-    properties:
-      new_password:
-        example: new_password456
-        type: string
-      old_password:
-        example: old_password123
-        type: string
-      user_id:
-        example: 1
-        type: integer
-    type: object
   handler.loginRequest:
     properties:
       password:
@@ -144,36 +132,8 @@ paths:
       summary: 用户注册
       tags:
       - 用户
-  /user/password:
-    post:
-      consumes:
-      - application/json
-      description: 用户修改密码接口
-      parameters:
-      - description: 修改密码请求
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/handler.changePasswordRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/handler.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/handler.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/handler.Response'
-      summary: 修改密码
-      tags:
-      - 用户
+schemes:
+- http
 securityDefinitions:
   ApiKeyAuth:
     in: header
